# t9-gamepad-mapper

./: .gitignore  README.md  builder.sh  gradle.properties  gradlew  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fd_receiver.c  gamepad.c  uinput_helper.c
app/src/main/java/com/t9mapper/: T9GamepadApp.kt
app/src/main/java/com/t9mapper/automation/: AppDetectionService.kt
app/src/main/java/com/t9mapper/data/db/: AppDatabase.kt
app/src/main/java/com/t9mapper/data/model/: Models.kt
app/src/main/java/com/t9mapper/service/: BootReceiver.kt  GamepadNative.kt  GamepadService.kt
app/src/main/java/com/t9mapper/ui/: MainActivity.kt
app/src/main/java/com/t9mapper/ui/screens/: AutomationScreen.kt  DashboardScreen.kt  ProfilesScreen.kt
app/src/main/java/com/t9mapper/ui/theme/: T9GamepadTheme.kt
app/src/main/res/mipmap-hdpi/: ic_launcher.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
gradle/: libs.versions.toml
